refactor: using of DjangoBoot template [DjangoBoot](https://github.com/pythonbrad/django-boot)

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
-__pycache__
-*.pyc
-[0-9]*.py
+# OSX #
+.DS_Store
+
+# Byte-compiled / optimized / DLL files #
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Django #
+*.log
 db.sqlite3
-static/assets
 media
+[0-9]*.py
+
+.venv
 .env
-.form_venv
+staticfiles
