--- a/.env_example
+++ b/.env_example
@@ -1,7 +1,11 @@
-allowed_hosts=""
-django_session=session_key
+django_session=secret_key
+debug=true
 db_name=database
 db_user=user
-db_pass=password
-db_host=127.0.0.1
+db_pass=secret
+db_host=mysql
 db_port=3306
+allowed_hosts=127.0.0.1,localhost
+internal_ips=127.0.0.1,localhost
+maintenance_ignore_urls=^/admin
+maintenance_mode=true
