--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,3 @@
 [pycodestyle]
 filename = *.py
-exclude = *.git, *.venv, *migrations, *django_form/settings.py, *__pycache__
+exclude = .git, .venv, migrations, settings.py, urls.py
