--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,27 @@
-asgiref==3.5.2
-certifi==2022.12.7
+-i https://pypi.org/simple
+asgiref==3.6.0 ; python_version >= '3.7'
+certifi==2022.12.7 ; python_version >= '3.6'
 cffi==1.15.1
-charset-normalizer==2.1.1
-crispy-bulma==0.8.0
-cryptography==38.0.4
-defusedxml==0.7.1
-Django==4.1.4
-django-allauth==0.51.0
-django-crispy-forms==1.14.0
-django-debug-toolbar==3.6.0
-django-environ==0.9.0
-django-maintenance-mode==0.17.1
-idna==3.4
+charset-normalizer==3.1.0 ; python_full_version >= '3.7.0'
+crispy-bulma==0.9.0
+cryptography==40.0.1
+defusedxml==0.7.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+django==4.2
+django-allauth==0.54.0
+django-crispy-forms==2.0
+django-debug-toolbar==4.0.0
+django-environ==0.10.0
+django-maintenance-mode==0.18.0
+idna==3.4 ; python_version >= '3.5'
 mysqlclient==2.1.1
-oauthlib==3.2.2
-Pillow==9.3.0
-psycopg2-binary==2.9.3
+oauthlib==3.2.2 ; python_version >= '3.6'
+pillow==9.5.0
 pycparser==2.21
-PyJWT==2.6.0
-python-fsutil==0.7.0
+pyjwt[crypto]==2.6.0 ; python_version >= '3.7'
+python-fsutil==0.10.0
 python3-openid==3.2.0
-requests==2.28.1
-requests-oauthlib==1.3.1
-sqlparse==0.4.3
-urllib3==1.26.13
-whitenoise==6.2.0
+requests==2.28.2 ; python_version >= '3.7' and python_version < '4'
+requests-oauthlib==1.3.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+sqlparse==0.4.3 ; python_version >= '3.5'
+urllib3==1.26.15 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+whitenoise==6.4.0
